# OCAW_STL

./: .gitignore  CMakeLists.txt  README.md
OCAWBase/: CMakeLists.txt
OCAWBase/include/Common/OCAWBase/config/: ocawplatform.h
doc/: 2020_03_10.md
scripts/CMake/: CommonCppFlags.cmake
