cmake_minimum_required(VERSION 3.1)
project(OCAW_STL_BASE CXX)

#-------------------------------------------------------------------------------------------
# Options
#-------------------------------------------------------------------------------------------
options(OCAW_STL_BUILD_TESTS "Enable generation of build files for tests" OFF)

#-------------------------------------------------------------------------------------------
# Package Tests 
#-------------------------------------------------------------------------------------------
# TODO : Add the test for STL_BASE
#if(OCAW_STL_BUILD_TESTS)
#	add_subdirectory(test)
#endif()

#-------------------------------------------------------------------------------------------
# Defines 
#-------------------------------------------------------------------------------------------
# TODO : Should know what it is for
add_definitions(-D_CHAR16T)

#-------------------------------------------------------------------------------------------
# Header only library 
#-------------------------------------------------------------------------------------------
add_library(OCAW_STL_BASE INTERFACE) 

#-------------------------------------------------------------------------------------------
# Include dirs
#-------------------------------------------------------------------------------------------
target_include_directories(OCAW_STL_BASE INTERFACE include/Common)